# video-audio-tools

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  remove_speech.py  speech_recognition.py
configs/: configs.toml
models/: vocal_separator_model.pth
src/: functions.py  ml_vocal_speech_extractor.py  remove_speech.py
tests/: test_remove_speech.py
